--- a/articles/templates/detail.html
+++ b/articles/templates/detail.html
@@ -18,4 +18,10 @@
         <input type="submit">
     </form>
 
+    <hr>
+
+    {% for comment in comments %}
+        <li>{{comment.content}}</li>
+    {% endfor %}
+
 {% endblock %}
