--- a/articles/templates/index.html
+++ b/articles/templates/index.html
@@ -1,8 +1,22 @@
 {% extends 'base.html' %}
-
 {% block body %}
-    {% for article in articles %}
-        <h3>{{article.title}}</h3>
-        <a href="{% url 'articles:detail' article.id %}">detail</a>
-    {% endfor %}
+    <h1 class="displat-5 fw-bold text-body-emphasis mt-3">Questions</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>id</th>
+                <th>title</th>
+                <th>detail</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for article in articles %}
+                <tr>
+                    <td>{{ article.id }}</td>
+                    <td>{{ article.title }}</td>
+                    <td><a href="{% url 'articles:detail' article.id %}">DETAIL</a></td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
