--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="{% url 'articles:create' %}">Create</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Random</a>
+          <a class="nav-link" href="">Random</a>
         </li>
       </ul>
     
